--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ group = project.maven_group
 loom {
 	// Required as there's no common jar yet!
 	clientOnlyMinecraftJar()
-	noIntermediateMappings()
+	intermediaryUrl = "http://olivermakesco.de/assets/intermediary/b1.7.3.jar"
 }
 
 repositories {
@@ -22,11 +22,9 @@ repositories {
 dependencies {
 	minecraft libs.minecraft
 
-	mappings files("./mappings.jar")
+	mappings files("./mappings-b1.7.3-009.jar")
 
 	modImplementation libs.quilt.loader
-
-	implementation include('com.google.code.gson:gson:2.10.1')
 }
 
 processResources {
@@ -39,13 +37,13 @@ processResources {
 
 tasks.withType(JavaCompile).configureEach {
 	it.options.encoding = 'UTF-8'
-	it.options.release = 17
+	it.options.release = 8
 }
 
 java {
 	// Still required by IDEs such as Eclipse and Visual Studio Code
-	sourceCompatibility = JavaVersion.VERSION_17
-	targetCompatibility = JavaVersion.VERSION_17
+	sourceCompatibility = JavaVersion.VERSION_1_8
+	targetCompatibility = JavaVersion.VERSION_1_8
 
 	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task if it is present.
 	// If you remove this line, sources will not be generated.
